[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noaa-dat"
version = "0.1.0"
description = "Python Wrapper for NOAA Damage Assessment Toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Jeff Baskin", email = "jeff@aerocast.app" }
]

dependencies = [
    "pandas>=2.0",
    "geopandas",
    "requests",
]


[tool.setuptools]
packages = ["noaa_dat"]
package-dir = { "" = "src" }  

[tool.setuptools.package-data]
#dat-api = ["data/*.csv", "data/*.json"]